tests/baselines/reference/contextualTyping4.errors.txt
tests/cases/compiler/contextualTyping4.ts(1,13): error TS2322: Type '{ id: number; name: string; }' is not assignable to type '{ id: number; }'.
  Property 'name' does not exist on type '{ id: number; }'.


==== tests/cases/compiler/contextualTyping4.ts (1 errors) ====
    class foo { public bar:{id:number;} = {id:5, name:"foo"}; }
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ id: number; name: string; }' is not assignable to type '{ id: number; }'.
!!! error TS2322:   Property 'name' does not exist on type '{ id: number; }'.